treewide cleanup, refactor and reformat
Remove serialVersionUID because RPI is not used.
Add missing Override annotation.
Use isEmpty() and isBlank().
Reduce line spaces.